# movie-search-engine

./: .gitignore  Cargo.toml  README.md
src/: helpers.rs  indexing.rs  main.rs
src/data/: stop_words.json
