[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
porter-stemmer = "0.1.2"
roman = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
symspell = "0.4.3"
