[package]
name = "rust-search"
version = "0.1.1"
edition = "2021"

[dependencies]
porter-stemmer = "0.1.2"
progressing = "3.0.2"
regex = "1"
roman = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"]}
